# syberAgent

./: .dockerignore  .env.example  .gitignore  README.md  fly.toml  progress.md  spec.md  waf-spec.md
syber-platform/: .dockerignore  .env.example  .gitignore  README.md  infra_docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  skills-lock.json
syber-platform/.claude/: CLAUDE.md
syber-platform/.claude/agents/: behavioural_analytics.md  context_graph.md  exposure_analyst.md  response_orchestrator.md  threat_investigator.md
syber-platform/bus_config/: acls.sh  topics.yaml
syber-platform/graph_cypher/: attack_paths.cypher  schema.cypher
syber-platform/infra/: docker-compose.dev.yml  docker-compose.kali.yml  waf.example.yaml
syber-platform/infra/cloudflare/: README.md  waf_rules.example.json
syber-platform/infra/kali/: Dockerfile  entrypoint.sh
syber-platform/litellm/: proxy_config.yaml  proxy_config_sovereign.yaml
syber-platform/scripts/: _stream_filter.py  a.md  run_syber_claude.sh  syber_engage.sh  syber_fleet.sh  syber_phone_signup.sh  syber_session.sh  up_backends.sh
syber-platform/syber/: cleanup.py  config.py  data_lake.py  demo.py  mcp_server.py  reporting.py  repro.py  seed_data.py
syber-platform/syber/agents/: definitions.py  orchestrator.py  prompts.py
syber-platform/syber/analytics/: ensemble.py  features.py  isolation_forest.py  lstm_autoencoder.py  ocsvm.py  service.py
syber-platform/syber/audit/: log.py
syber-platform/syber/bench/: README.md  __init__.py  baselines.py  datasets.py  models.py  prompts.py  run.py  (+1 more)
(+121 files in other folders)
